@@ -1,3 +1,9 @@
+2012-02-28  Kaz Kylheku  <kaz@kylheku.com>
+
+	* lib.c (sub_list, replace_list, lazy_sub_str, sub_str, replace_str,
+	sub_vec, replace_vec): Regression: replace incorrect zerop(to)
+	test with to == zero, because to is not necessarily a number.
+
 2012-02-27  Kaz Kylheku  <kaz@kylheku.com>
 
 	* txr.vim: Recognize backslash-newline break in regexes.
